6274 | 9 files | M game/bin/win64/steamnetworkingsockets_strings.txt,  M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/scripts/abilities.vdata,  M game/citadel/pak01_dir/scripts/heroes.vdata,  M game/citadel/pak01_dir/soundevents/hero/unicorn.vsndevts,  M game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt,  M game/citadel/steam.inf
https://steamdb.info/patchnotes/21857452/

--- a/game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt
+++ b/game/citadel/resource/localization/citadel_heroes/citadel_heroes_english.txt
@@ -4796,7 +4796,7 @@
 
 
 		"ability_unicorn_dazzlingorb"				"Shining Wonder"
-		"ability_unicorn_dazzlingorb_desc"			"Launch a deadly orb of light that deals {g:citadel_inline_attribute:'SpiritDamage'} and applies {g:citadel_inline_attribute:'Slow'} and reduces <span class=\"highlight\">Dash Distance</span> on impact. The orb then bounces to the nearest enemy within range. If no target is found, the orb will linger for a short duration while continuing to look for targets.<br><br><span class=\"diminish\">Prioritizes enemy heroes when picking targets. Refunds half the cooldown on a miss.</span>"
+		"ability_unicorn_dazzlingorb_desc"			"Launch a deadly orb of light that deals {g:citadel_inline_attribute:'SpiritDamage'} and applies {g:citadel_inline_attribute:'Slow'} and reduces <span class=\"highlight\">Dash Distance</span> on impact. The orb then bounces to the enemies within range. If no target is found, the orb will linger for a short duration while continuing to look for targets.<br><br><span class=\"diminish\">Prioritizes enemy heroes when picking targets. Refunds half the cooldown on a miss.</span>"
 		"ability_unicorn_dazzlingorb_t1_desc"		"-{s:SlowPercent}% Move Speed and {s:GroundDashReductionPercent}% Dash Distance"
 		"ability_unicorn_dazzlingorb_t3_desc"		"+{s:MaxBounces} Max Bounces and {s:AbilityCooldown}s Cooldown"
 		"BounceGrace_postvalue_label"				"Max Linger Duration"
