6281 | 58 files | M Protobufs/citadel_gcmessages_client.proto,  M game/bin/win64/engine2_strings.txt,  M game/bin/win64/gfsdk_aftermath_lib.x64_strings.txt,  M game/bin/win64/inputsystem_strings.txt,  M game/bin/win64/libfbxsdk_2020_3_1_strings.txt,  M game/bin/win64/networksystem_strings.txt,  M game/bin/win64/panorama_strings.txt,  M game/bin/win64/panoramauiclient_strings.txt,  M game/bin/win64/resourcecompiler_strings.txt,  M game/bin/win64/soundsystem_strings.txt,  M game/bin/win64/v8_libbase_strings.txt,  M game/bin/win64/visbuilder_strings.txt,  M game/citadel/bin/win64/client_strings.txt,  M game/citadel/bin/win64/host_strings.txt,  M game/citadel/bin/win64/server_strings.txt,  M game/citadel/gameinfo.gi,  M game/citadel/pak01_dir.txt,  M game/citadel/pak01_dir/panorama/layout/hud.xml,  M game/citadel/pak01_dir/panorama/layout/settings_keybinder.xml,  M game/citadel/pak01_dir/panorama/styles/chat.css,  M game/citadel/pak01_dir/panorama/styles/citadel_base_styles.css,  M game/citadel/pak01_dir/panorama/styles/citadel_ui
https://steamdb.info/patchnotes/21891666/

--- a/game/citadel/resource/localization/citadel_main/citadel_main_english.txt
+++ b/game/citadel/resource/localization/citadel_main/citadel_main_english.txt
@@ -741,6 +741,10 @@
 		"Citadel_Survey_Question_HeroPlayAgainst_LowLabel"		"Awful"
 		"Citadel_Survey_Question_HeroPlayAgainst_HighLabel"		"Great"
 
+		"Citadel_Survey_Question_HeroPlayAs"					"How fun is it to play <span class=\"playAsHighlight\"><b>as</b> this hero?</span>"
+		"Citadel_Survey_Question_HeroPlayAs_LowLabel"			"Awful"
+		"Citadel_Survey_Question_HeroPlayAs_HighLabel"			"Great"
+
 		"Citadel_Survey_Question_HeroPower"						"How powerful is this hero?"
 		"Citadel_Survey_Question_HeroPower_LowLabel"			"Weak"
 		"Citadel_Survey_Question_HeroPower_HighLabel"			"Powerful"
@@ -1905,8 +1909,8 @@
 		"Citadel_Replay_Speed_16"							"16x"
 
 
-		"Citadel_Graph_Team1"							"Amber"
-		"Citadel_Graph_Team2"							"Sapphire"
+		"Citadel_Graph_Team1"							"Hidden King"
+		"Citadel_Graph_Team2"							"Archmother"
 		"Citadel_Graph_NetWorthDeltaLine"				"Souls Collected Difference"
 		"Citadel_Graph_WeaponDamage"					"Gun Damage"
 		"Citadel_Graph_WeaponDamageCrit"				"Gun Damage - Crit"
@@ -3353,10 +3357,10 @@
 		"hud_spectate_count"					"{d:spectatorCount}"
 		"hud_spectate_count_tooltip"			"Viewers currently spectating"
 
-		"hud_spectate_minimap_view_sapphire"	"{g:citadel_binding:'Spectator.SpectatorFOWTeamSapphire'}Sapphire"
-		"hud_spectate_minimap_view_amber"		"{g:citadel_binding:'Spectator.SpectatorFOWTeamAmber'}Amber"
-		"hud_spectate_minimap_view_both_teams"	"{g:citadel_binding:'Spectator.SpectatorFOWTeamBoth'}Both Teams"
-		"hud_spectate_minimap_view_target_team" "{g:citadel_binding:1st:'Spectator.SpectatorFOWTeamTarget'}Target's"
+		"hud_spectate_minimap_view_sapphire"	"{g:citadel_binding:'Spectator.SpectatorFOWTeamSapphire'} Archmother"
+		"hud_spectate_minimap_view_amber"		"{g:citadel_binding:'Spectator.SpectatorFOWTeamAmber'} Hidden King"
+		"hud_spectate_minimap_view_both_teams"	"{g:citadel_binding:'Spectator.SpectatorFOWTeamBoth'} Both Teams"
+		"hud_spectate_minimap_view_target_team" "{g:citadel_binding:1st:'Spectator.SpectatorFOWTeamTarget'} Target's"
 		"hud_spectate_minimap_view"				"Map View" 
 
 		"kill_hype_KillStreak_count"	"{d:kill_streak}"
